--- a/src/assets/documents/components/table.html
+++ b/src/assets/documents/components/table.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title ">
     Data Table
-    <span class="docs-markdown-h3" id="contents">
+    <span class="docs-markdown-h3"
+          id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -19,11 +20,14 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3" id="examples">
+    <span class="docs-markdown-h3"
+          id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    A simple example with no frills.</div>
+    Data tables can include three or more columns. A header row at the top lists column names, and all subsequent rows contain
+    data. Data tables can include a corresponding visualization, such as a graph.
+  </div>
   <!-- <div class="doc-example-container">
     <div app-docs-example="table-basic"></div>
   </div> -->
@@ -35,7 +39,8 @@
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props">
+    <span class="docs-markdown-h3"
+          id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -110,15 +115,16 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
+    <span class="docs-markdown-h3"
+          id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
 
     <p>
-      Data tables display information in a way that&#x2019;s easy to scan, so that users can look for patterns and insights. They can
-      be embedded in primary content, such as cards.
+      Data tables display information in a way that&#x2019;s easy to scan, so that users can look for patterns and insights. They
+      can be embedded in primary content, such as cards.
     </p>
     <p>Data tables can include:</p>
     <ul class="doc-list">
@@ -139,7 +145,8 @@
 
   <div class="doc-title-2">
     Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
+    <span class="docs-markdown-h3"
+          id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
@@ -147,11 +154,15 @@
     As for expanded rows, use grey background color with top and bottom shadows to distinguish from main rows. </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:448px">
-      <img src="assets/img/doc/table-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center"
+         style="height:448px">
+      <img src="assets/img/doc/table-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:448px">
-      <img src="assets/img/doc/table-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
+         style="height:448px">
+      <img src="assets/img/doc/table-dont.png"
+           alt="">
     </div>
   </div>
 
@@ -164,21 +175,27 @@
 
   <div class="doc-title-2">
     Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
+    <span class="docs-markdown-h3"
+          id="design_specs">
       <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:512px">
-    <img src="assets/img/doc/table-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center"
+       style="height:512px">
+    <img src="assets/img/doc/table-spec.png"
+         alt="">
   </div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
+    <span class="docs-markdown-h3"
+          id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  </div>
+  <a class="doc-download-link"
+     href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
