--- a/src/assets/documents/components/colors.html
+++ b/src/assets/documents/components/colors.html
@@ -147,99 +147,101 @@
     Tertiary colors are used for data table statuses and texts.
   </div>
 
-  <div class="doc-color-container">
-    <div class="doc-color-block doc-color-border-top">
-      <div class="doc-color-background doc-color-yellow doc-color-level1"></div>
-      <span class="doc-color-name">viz-yellow</span>
-      <span class="doc-color-opacity">#FFC02E, 4%</span>
+  <div class="doc-color-containers-wrapper">
+
+    <div class="doc-color-container docs-mr24 docs-mb24">
+      <div class="doc-color-block doc-color-border-top">
+        <div class="doc-color-background doc-color-yellow doc-color-level1"></div>
+        <span class="doc-color-name">viz-yellow</span>
+        <span class="doc-color-opacity">#FFC02E, 4%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-yellow doc-color-level2"></div>
+        <span class="doc-color-name">viz-yellow</span>
+        <span class="doc-color-opacity">#FFC02E, 12%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-yellow doc-color-level3"></div>
+        <span class="doc-color-name">viz-yellow</span>
+        <span class="doc-color-opacity">#FFC02E, 16%</span>
+      </div>
+      <div class="doc-color-primary doc-color-border-bottom">
+        <div class="doc-color-background doc-color-yellow"></div>
+        <span class="doc-color-name">viz-yellow</span>
+        <span class="doc-color-opacity">#FFC02E, 100%</span>
+      </div>
     </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-yellow doc-color-level2"></div>
-      <span class="doc-color-name">viz-yellow</span>
-      <span class="doc-color-opacity">#FFC02E, 12%</span>
+
+    <div class="doc-color-container docs-mr24 docs-mb24">
+      <div class="doc-color-block doc-color-border-top">
+        <div class="doc-color-background doc-color-green doc-color-level1"></div>
+        <span class="doc-color-name">viz-green</span>
+        <span class="doc-color-opacity">#9CD020, 4%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-green doc-color-level2"></div>
+        <span class="doc-color-name">viz-green</span>
+        <span class="doc-color-opacity">#9CD020, 12%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-green doc-color-level3"></div>
+        <span class="doc-color-name">viz-green</span>
+        <span class="doc-color-opacity">#9CD020, 16%</span>
+      </div>
+      <div class="doc-color-primary doc-color-border-bottom">
+        <div class="doc-color-background doc-color-green"></div>
+        <span class="doc-color-name">viz-green</span>
+        <span class="doc-color-opacity">#9CD020, 100%</span>
+      </div>
     </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-yellow doc-color-level3"></div>
-      <span class="doc-color-name">viz-yellow</span>
-      <span class="doc-color-opacity">#FFC02E, 16%</span>
+
+    <div class="doc-color-container docs-mr24 docs-mb24">
+      <div class="doc-color-block doc-color-border-top">
+        <div class="doc-color-background doc-color-gray doc-color-level1"></div>
+        <span class="doc-color-name">viz-gray</span>
+        <span class="doc-color-opacity">#696969, 4%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-gray doc-color-level2"></div>
+        <span class="doc-color-name">viz-gray</span>
+        <span class="doc-color-opacity">#696969, 12%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-gray doc-color-level3"></div>
+        <span class="doc-color-name">viz-gray</span>
+        <span class="doc-color-opacity">#696969, 16%</span>
+      </div>
+      <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white">
+        <div class="doc-color-background doc-color-gray"></div>
+        <span class="doc-color-name">viz-gray</span>
+        <span class="doc-color-opacity">#696969, 100%</span>
+      </div>
     </div>
-    <div class="doc-color-primary doc-color-border-bottom docs-mb24">
-      <div class="doc-color-background doc-color-yellow"></div>
-      <span class="doc-color-name">viz-yellow</span>
-      <span class="doc-color-opacity">#FFC02E, 100%</span>
+
+    <div class="doc-color-container docs-mr24 docs-mb24">
+      <div class="doc-color-block doc-color-border-top">
+        <div class="doc-color-background doc-color-black doc-color-level1"></div>
+        <span class="doc-color-name">viz-black</span>
+        <span class="doc-color-opacity">#000000, 4%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-black doc-color-level2"></div>
+        <span class="doc-color-name">viz-black</span>
+        <span class="doc-color-opacity">#000000, 12%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-black doc-color-level3"></div>
+        <span class="doc-color-name">viz-black</span>
+        <span class="doc-color-opacity">#000000, 16%</span>
+      </div>
+      <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white">
+        <div class="doc-color-background doc-color-black "></div>
+        <span class="doc-color-name">viz-black</span>
+        <span class="doc-color-opacity">#000000, 100%</span>
+      </div>
     </div>
+
   </div>
-
-  <div class="doc-color-container docs-ml24">
-    <div class="doc-color-block doc-color-border-top">
-      <div class="doc-color-background doc-color-green doc-color-level1"></div>
-      <span class="doc-color-name">viz-green</span>
-      <span class="doc-color-opacity">#9CD020, 4%</span>
-    </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-green doc-color-level2"></div>
-      <span class="doc-color-name">viz-green</span>
-      <span class="doc-color-opacity">#9CD020, 12%</span>
-    </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-green doc-color-level3"></div>
-      <span class="doc-color-name">viz-green</span>
-      <span class="doc-color-opacity">#9CD020, 16%</span>
-    </div>
-    <div class="doc-color-primary doc-color-border-bottom docs-mb24">
-      <div class="doc-color-background doc-color-green"></div>
-      <span class="doc-color-name">viz-green</span>
-      <span class="doc-color-opacity">#9CD020, 100%</span>
-    </div>
-  </div>
-
-  <div class="doc-color-container">
-    <div class="doc-color-block doc-color-border-top">
-      <div class="doc-color-background doc-color-gray doc-color-level1"></div>
-      <span class="doc-color-name">viz-gray</span>
-      <span class="doc-color-opacity">#696969, 4%</span>
-    </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-gray doc-color-level2"></div>
-      <span class="doc-color-name">viz-gray</span>
-      <span class="doc-color-opacity">#696969, 12%</span>
-    </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-gray doc-color-level3"></div>
-      <span class="doc-color-name">viz-gray</span>
-      <span class="doc-color-opacity">#696969, 16%</span>
-    </div>
-    <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white">
-      <div class="doc-color-background doc-color-gray"></div>
-      <span class="doc-color-name">viz-gray</span>
-      <span class="doc-color-opacity">#696969, 100%</span>
-    </div>
-  </div>
-
-  <div class="doc-color-container docs-ml24">
-    <div class="doc-color-block doc-color-border-top">
-      <div class="doc-color-background doc-color-black doc-color-level1"></div>
-      <span class="doc-color-name">viz-black</span>
-      <span class="doc-color-opacity">#000000, 4%</span>
-    </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-black doc-color-level2"></div>
-      <span class="doc-color-name">viz-black</span>
-      <span class="doc-color-opacity">#000000, 12%</span>
-    </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-black doc-color-level3"></div>
-      <span class="doc-color-name">viz-black</span>
-      <span class="doc-color-opacity">#000000, 16%</span>
-    </div>
-    <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white">
-      <div class="doc-color-background doc-color-black "></div>
-      <span class="doc-color-name">viz-black</span>
-      <span class="doc-color-opacity">#000000, 100%</span>
-    </div>
-  </div>
-
-
 
   <div class="doc-divider">
   </div>
@@ -257,35 +259,35 @@
 
 
   <div class="doc-color-strip-wrapper">
-    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-teal docs-mb24">
+    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-teal docs-mr24 docs-mb24">
       <span>chart-teal</span>
       <span>#00CC99</span>
     </div>
-    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-purple docs-mb24">
+    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-purple docs-mr24 docs-mb24">
       <span>chart-purple</span>
       <span>#9966FF</span>
     </div>
-    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-orange docs-mb24">
+    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-orange docs-mr24 docs-mb24">
       <span>chart-orange</span>
       <span>#FF9933</span>
     </div>
-    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-blue docs-mb24">
+    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-blue docs-mr24 docs-mb24">
       <span>chart-blue</span>
       <span>#3399FF</span>
     </div>
-    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-green docs-mb24">
+    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-green docs-mr24 docs-mb24">
       <span>chart-green</span>
       <span>#99CC33</span>
     </div>
-    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-pink docs-mb24">
+    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-pink docs-mr24 docs-mb24">
       <span>chart-pink</span>
       <span>#FF6699</span>
     </div>
-    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-yellow">
+    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-yellow docs-mr24 docs-mb24">
       <span>chart-yellow</span>
       <span>#FFFF33</span>
     </div>
-    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-red">
+    <div class="doc-color-strip doc-color-text-color-black doc-color-chart-red docs-mr24 docs-mb24">
       <span>chart-red</span>
       <span>#FF3333</span>
     </div>
@@ -309,11 +311,11 @@
 
 
   <div class="doc-color-strip-wrapper">
-    <div class="doc-color-strip doc-color-black docs-mb24 doc-color-text-color-white">
+    <div class="doc-color-strip doc-color-black docs-mb24 docs-mr24 doc-color-text-color-white">
       <span>viz-black</span>
       <span>#000000</span>
     </div>
-    <div class="doc-color-strip doc-color-gray docs-mb24 doc-color-text-color-white">
+    <div class="doc-color-strip doc-color-gray docs-mb24 docs-mr24 doc-color-text-color-white">
       <span>viz-gray</span>
       <span>#696969</span>
     </div>
@@ -342,19 +344,19 @@
 
 
   <div class="doc-color-strip-wrapper">
-    <div class="doc-color-strip doc-color-light-gray docs-mb24 doc-color-text-color-black">
+    <div class="doc-color-strip doc-color-light-gray docs-mb24 docs-mr24 doc-color-text-color-black">
       <span>viz-light-gray</span>
       <span>#C3C3C3</span>
     </div>
-    <div class="doc-color-strip doc-color-extra-light-gray docs-mb24 doc-color-text-color-black">
+    <div class="doc-color-strip doc-color-extra-light-gray docs-mb24 docs-mr24 doc-color-text-color-black">
       <span>viz-extra-light-gray</span>
       <span>#E9E9E9</span>
     </div>
-    <div class="doc-color-strip doc-color-gray-special-1 doc-color-text-color-black">
+    <div class="doc-color-strip doc-color-gray-special-1 docs-mr24 docs-mb24 doc-color-text-color-black">
       <span></span>
       <span>#F1F1F1</span>
     </div>
-    <div class="doc-color-strip doc-color-gray-special-2 doc-color-text-color-black">
+    <div class="doc-color-strip doc-color-gray-special-2 docs-mr24 docs-mb24 doc-color-text-color-black">
       <span></span>
       <span>#FAFAFA</span>
     </div>
