--- a/libs/style.scss
+++ b/libs/style.scss
@@ -388,6 +388,7 @@ td.mat-cell,
 .mat-form-field-infix {
   textarea {
     color: #000000;
+    white-space: pre-wrap;
   }
 }
 // body {
@@ -473,6 +474,9 @@ td.mat-cell,
 
 //card style
 .mat-card {
+  background: #ffffff;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.07),
+    0 2px 1px -1px rgba(0, 0, 0, 0.06), 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   cursor: pointer;
   &:hover {
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
@@ -504,7 +508,7 @@ td.mat-cell,
   }
 }
 .mat-badge-content {
-  width: max-content !important;
+  width: auto !important;
   border-radius: 12px !important;
   // min-width: 24px;
   height: 24px !important;
@@ -515,7 +519,7 @@ td.mat-cell,
 .mat-badge-medium.mat-badge-overlap {
   &.mat-badge-after {
     .mat-badge-content {
-      right: auto;
+      right: auto !important;
       left: 50%;
     }
   }
@@ -840,6 +844,7 @@ mat-datepicker-content.mat-datepicker-content {
 
     &-icon-close {
       position: absolute;
+      top: 12px;
       right: 16px;
       display: none !important;
     }
