--- a/libs/style.scss
+++ b/libs/style.scss
@@ -884,6 +884,72 @@ mat-datepicker-content.mat-datepicker-content {
   
 }
 
+//hide scrollbar
+/*webkit内核*/
+.hide-scroll::-webkit-scrollbar {
+  width:0px;
+  height:0px;
+}
+.hide-scroll::-webkit-scrollbar-button    {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-webkit-scrollbar-track     {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-webkit-scrollbar-track-piece {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-webkit-scrollbar-thumb{
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-webkit-scrollbar-corner {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-webkit-scrollbar-resizer  {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-webkit-scrollbar {
+  width:10px;
+  height:10px;
+}
+/*o内核*/
+.hide-scroll .-o-scrollbar{
+  -moz-appearance: none !important;   
+  background: rgba(0,255,0,0) !important;  
+}
+.hide-scroll::-o-scrollbar-button    {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-o-scrollbar-track     {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-o-scrollbar-track-piece {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-o-scrollbar-thumb{
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-o-scrollbar-corner {
+  background-color:rgba(0,0,0,0);
+}
+.hide-scroll::-o-scrollbar-resizer  {
+  background-color:rgba(0,0,0,0);
+}
+/*IE10,IE11,IE12*/
+.hide-scroll{
+  -ms-scroll-chaining: chained;
+  -ms-overflow-style: none;
+  -ms-content-zooming: zoom;
+  -ms-scroll-rails: none;
+  -ms-content-zoom-limit-min: 100%;
+  -ms-content-zoom-limit-max: 500%;
+  -ms-scroll-snap-type: proximity;
+  -ms-scroll-snap-points-x: snapList(100%, 200%, 300%, 400%, 500%);
+  -ms-overflow-style: none;
+  overflow: auto;
+}
+
+
 //Typography: Styles
 .viz-h1 {
   /* Headline H1: */
