--- a/src/assets/examples/dialog-basic/dialog-contain.component.html
+++ b/src/assets/examples/dialog-basic/dialog-contain.component.html
@@ -12,7 +12,7 @@
     </mat-form-field>
 
 
-    <div class="modal-checkbox-wrap">
+    <div class="modal-checkbox-wrap hide-scroll">
 
       <div class="modal-selectall">
         <mat-checkbox class="modal-selectall" [checked]="descendantsAllSelected({children: tree})" [indeterminate]="descendantsPartiallySelected({children: tree})" (change)="selectAll($event)">Select All</mat-checkbox>
