Fix bug : header dropdown arrow color not correct

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -583,9 +583,9 @@ td.mat-cell,
 }
 
 //icon
-.mat-icon {
-  color: $viz-gray;
-}
+// .mat-icon {
+//   color: $viz-gray;
+// }
 .viz-icon-small {
   font-size: 18px;
 }
