Fix bug : update success of feedback indicator's background color

--- a/libs/components/feedback-indicator/viz-feedback-indicator.component.scss
+++ b/libs/components/feedback-indicator/viz-feedback-indicator.component.scss
@@ -41,7 +41,7 @@
     }
     &-success {
       border: 2px solid #9cd020;
-      background-color: #FFF7F7;
+      background-color: #FBFFF2;
       .viz-feedback-indicator-icon {
         color: #9cd020;
       }
