Fix bug : add title property to footer component

--- a/libs/components/footer/viz-footer.component.html
+++ b/libs/components/footer/viz-footer.component.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="footer-center">
-    <p>Vizient MDA</p>
+    <p>{{title}}</p>
     <!-- <p>&copy; 2018 Vizient & iLabs. All Rights Reserved.</p> -->
     <p>&copy; 2018 Vizient. All Rights Reserved.</p>
   </div>
