--- a/src/assets/examples/footer-basic/footer-basic.component.html
+++ b/src/assets/examples/footer-basic/footer-basic.component.html
@@ -1,3 +1,3 @@
 <div class="example-container">
-    <viz-footer [brands]="options"></viz-footer>
+    <viz-footer [brands]="options" title="Vizient MDA"></viz-footer>
 </div>
