--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,6 @@
 </viz-header>
 <div class="main-sec">
     <router-outlet></router-outlet>
-    <viz-footer [brands] = "options"></viz-footer>
+    <viz-footer [brands] = "options" title="Vizient MDA"></viz-footer>
 </div>
 
