Add components : VizHttpStatusComponent

--- a/src/app/pages/components/components.component.html
+++ b/src/app/pages/components/components.component.html
@@ -17,7 +17,7 @@
       <ul class="component-list">
         <li *ngFor="let component of class.components; let i=index" class="component-list-item" (click)="routeTo(component.route)">
           <div class="component-list-svg">
-            <img src="assets/img/{{component.title}}.svg" alt="{{component.title}}">
+            <img src="assets/img/{{component.img}}.svg" alt="{{component.title}}">
           </div>
           <div class="component-item">
             <div class="component-title-3 component-title-link">{{component.title}}</div>
