--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -81,7 +81,7 @@
     VizProgressSpinnerModule,
     VizTableModule,
     VizSteppersModule,
-    VizBottomSheetModue,
+    VizBottomSheetModule,
     VizBreadcrumbModule,
     VizSearchModule,
     VizChartModule,
@@ -92,7 +92,7 @@
     VizProgressBarModule,
     VizPaginatorModule,
     VizSnackBarModule,
-    VizBottomSheetModue
+    VizBottomSheetModule
     } <span class="hljs-keyword">from</span> <span class="hljs-string">&apos;viz-toolkit&apos;</span>;
     <span class="hljs-meta">@NgModule</span>({
       ...
@@ -121,7 +121,7 @@
       VizProgressSpinnerModule,
       VizTableModule,
       VizSteppersModule,
-      VizBottomSheetModue,
+      VizBottomSheetModule,
       VizBreadcrumbModule,
       VizSearchModule,
       VizChartModule,
@@ -132,7 +132,7 @@
       VizProgressBarModule,
       VizPaginatorModule,
       VizSnackBarModule,
-      VizBottomSheetModue
+      VizBottomSheetModule
       ],
       ...
     })
