--- a/src/app/pages/components/components.component.scss
+++ b/src/app/pages/components/components.component.scss
@@ -72,7 +72,6 @@
     &-class {
       width: calc((100%) / 3);
 
-
       &:nth-child(3n + 1) {
         // background-color: red;
         ul {
@@ -91,6 +90,14 @@
       justify-content: space-between;
       column-count: 3;
       flex-wrap: wrap;
+    }
+
+    &-sub-class-wrapper {
+    }
+
+    &-sub-class-container {
+      display: flex;
+      flex-direction: column;
     }
 
     &-header {
@@ -145,3 +152,6 @@
     }
   }
 }
+
+
+
