--- a/src/assets/examples/header-basic/header-basic.component.html
+++ b/src/assets/examples/header-basic/header-basic.component.html
@@ -1,4 +1,15 @@
 <div class="example-container">
   <viz-header title="Application" brandLink="/" userName="Stan Lee" type="primary">
+    <div headerLogin>
+      <button mat-menu-item>
+        View Profile
+      </button>
+      <button mat-menu-item>
+        Account Settings
+      </button>
+      <button mat-menu-item routerLink="/login">
+        Log Out
+      </button>
+    </div>
   </viz-header>
 </div>
