Fix bug : Homepage scroll broken on mobile --> https://trello.com/c/2MPDIWYQ/167-documentation-website-home-page-is-broken-on-mobile

--- a/libs/components/footer/viz-footer.component.html
+++ b/libs/components/footer/viz-footer.component.html
@@ -15,7 +15,7 @@
       </ul>
     </div>
   </div>
-  <div class="footer-center">
+  <div class="footer-center" [class.footer-top]="isBrands()">
     <p>{{title}}</p>
     <!-- <p>&copy; 2018 Vizient & iLabs. All Rights Reserved.</p> -->
     <p>&copy; 2018 Vizient. All Rights Reserved.</p>
