--- a/src/assets/examples/header-application/header-application.component.html
+++ b/src/assets/examples/header-application/header-application.component.html
@@ -7,7 +7,7 @@
       <button mat-menu-item>
         Operational Reports
       </button>
-      <button mat-menu-item routerLink="/login" [matBadge]="1">
+      <button mat-menu-item routerLink="/login">
         System Health  
       </button>
     </div>
