Fix homepage responsive issue

--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -143,6 +143,7 @@
       .home-sec-2 {
         flex-direction: column;
         div {
+          margin: 0 auto;
           .docs-feature-thumb {
             margin: 0 auto;
           }
