--- a/libs/components/date-range-picker/viz-date-range-picker.component.html
+++ b/libs/components/date-range-picker/viz-date-range-picker.component.html
@@ -10,7 +10,7 @@
           (dateInput)="onDateInput($event)"
           (dateChange)="onDateChange($event)">
         <mat-range-datepicker
-          #resultPicker [rangeMode]="true" (closed)="this.onClose($event)">
+          #resultPicker [rangeMode]="true" (closed)="this.onClose($event)" [typeMode]="typeMode">
         </mat-range-datepicker>
         <mat-range-datepicker-toggle matSuffix [for]="resultPicker"></mat-range-datepicker-toggle>
     </mat-form-field>
