--- a/libs/components/date-range-picker/viz-date-range-picker.component.scss
+++ b/libs/components/date-range-picker/viz-date-range-picker.component.scss
@@ -42,7 +42,7 @@
       padding: 4px 24px !important;
     }
     .mat-datepicker-content {
-      height: 501px !important;
+      // height: 501px !important;
     }
   }
 }
