--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -35,11 +35,27 @@
   <div id="exampleWrapper">
 
     <div class="doc-desc-2">
+      Use in forms to let userenter a year and month.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="month-picker-single"></div>
+    </div>
+
+
+    <div class="doc-desc-2">
       Use in forms to let user enter a date range.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="date-picker-basic"></div>
     </div>
+
+    <div class="doc-desc-2">
+      Use in forms to let use enter a month range.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="month-picker-range"></div>
+    </div>
+
 
     <!-- <div class="doc-desc-2">
       Datepicker input and change events
