--- a/src/assets/examples/date-picker-basic/date-picker-basic.component.html
+++ b/src/assets/examples/date-picker-basic/date-picker-basic.component.html
@@ -1,1 +1,1 @@
-<viz-date-range-picker [date]="dateRange" (onApply)="applyDateRange($event)"></viz-date-range-picker>
+<viz-date-range-picker [date]="dateRange" (onApply)="applyDateRange($event)" typeMode="date" rangeMode></viz-date-range-picker>
