--- a/src/assets/examples/date-picker-single/date-picker-single.component.html
+++ b/src/assets/examples/date-picker-single/date-picker-single.component.html
@@ -1,5 +1,10 @@
-<mat-form-field>
+<!-- <mat-form-field>
   <input matInput [matDatepicker]="picker" placeholder="Choose a date" autocomplete="off">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
+</mat-form-field> -->
+
+
+
+
+<viz-date-range-picker [date]="dateRange" (onApply)="applyDateRange($event)" typeMode="date"></viz-date-range-picker>
