--- a/libs/components/date-range-picker/datepicker/datepicker-content.scss
+++ b/libs/components/date-range-picker/datepicker/datepicker-content.scss
@@ -1,38 +1,48 @@
-.mat-datepicker-content{
-  box-shadow:0 5px 5px -3px rgba(0,0,0,.2),0 8px 10px 1px rgba(0,0,0,.14),0 3px 14px 2px rgba(0,0,0,.12);
-  display:block
+.mat-datepicker-content {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  display: block;
 }
-.mat-datepicker-content{
-  width:593px;
+.mat-datepicker-content {
+  // width:593px;
+  width: auto;
   // height:493px;
   height: auto;
 }
-.from-date-sec, .end-date-sec {
+.from-date-sec,
+.end-date-sec {
   display: inline-block;
   width: 50%;
   // height: 360px;
   height: auto;
   box-sizing: border-box;
 }
+.from-date-sec-single {
+  width: 100%;
+}
 .from-date-sec {
-  border-right: .5px solid #E9E9E9;
+  border-right: 0.5px solid #e9e9e9;
 }
 .end-date-sec {
-  border-left: 0px solid #E9E9E9;
+  border-left: 0px solid #e9e9e9;
 }
 .range-calendar-wrapper {
+  width: 550px;
   border-bottom: 1px solid #e9e9e9;
+}
+.range-calendar-wrapper-single {
+  width: 350px;
 }
 .quick-select-sec {
   // border-top: 1px solid #E9E9E9;
-  border-bottom: 1px solid #E9E9E9;
+  border-bottom: 1px solid #e9e9e9;
   height: 50px;
   line-height: 50px;
   padding: 0 20px;
   font-size: 14px;
   font-weight: 200;
   .select-title {
-    color: #9F9F9F;
+    color: #9f9f9f;
   }
   ul {
     display: inline-block;
@@ -58,60 +68,79 @@
     margin-left: 10px;
   }
 }
-.mat-datepicker-content-touch{
-  box-shadow:0 0 0 0 rgba(0,0,0,.2),0 0 0 0 rgba(0,0,0,.14),0 0 0 0 rgba(0,0,0,.12);
-  display:block;
-  max-height:80vh;
-  overflow:auto;
-  margin:-24px
+.mat-datepicker-content-touch {
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.14),
+    0 0 0 0 rgba(0, 0, 0, 0.12);
+  display: block;
+  max-height: 80vh;
+  overflow: auto;
+  margin: -24px;
 }
-.mat-datepicker-content-touch .mat-calendar{
-  min-width:250px;
-  min-height:312px;
-  max-width:750px;
-  max-height:788px
+.mat-datepicker-content-touch .mat-calendar {
+  min-width: 250px;
+  min-height: 312px;
+  max-width: 750px;
+  max-height: 788px;
 }
-@media all and (orientation:landscape){
-  .mat-datepicker-content-touch .mat-calendar{
-      width:64vh;
-      height:80vh
+@media all and (orientation: landscape) {
+  .mat-datepicker-content-touch .mat-calendar {
+    width: 64vh;
+    height: 80vh;
   }
 }
-@media all and (orientation:portrait){
-  .mat-datepicker-content-touch .mat-calendar{
-      width:80vw;
-      height:100vw
+@media all and (orientation: portrait) {
+  .mat-datepicker-content-touch .mat-calendar {
+    width: 80vw;
+    height: 100vw;
   }
 }
-:not(.mat-calendar-body-disabled):hover > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-semi-selected),
-.cdk-keyboard-focused .mat-calendar-body-active > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-semi-selected),
-.cdk-program-focused .mat-calendar-body-active > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-semi-selected) {
-    background-color: rgba(0, 0, 0, 0.04); }
+:not(.mat-calendar-body-disabled):hover
+  > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-semi-selected),
+.cdk-keyboard-focused
+  .mat-calendar-body-active
+  > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-semi-selected),
+.cdk-program-focused
+  .mat-calendar-body-active
+  > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-semi-selected) {
+  background-color: rgba(0, 0, 0, 0.04);
+}
 
 :not(.mat-calendar-body-disabled):hover > .mat-calendar-body-semi-selected,
-.cdk-keyboard-focused .mat-calendar-body-active > .mat-calendar-body-semi-selected,
-.cdk-program-focused .mat-calendar-body-active > .mat-calendar-body-semi-selected {
-    background-color: #3f51b5;
-    color: white; }
+.cdk-keyboard-focused
+  .mat-calendar-body-active
+  > .mat-calendar-body-semi-selected,
+.cdk-program-focused
+  .mat-calendar-body-active
+  > .mat-calendar-body-semi-selected {
+  background-color: #3f51b5;
+  color: white;
+}
 
 // .mat-calendar-body-selected {
 //     background-color: #3f51b5;
 //     color: white; }
 
 .mat-calendar-body-begin-range:not(.mat-calendar-body-end-range) {
-    border-radius: 100% 0 0 100%;
-    background-color: #e8eaf6; }
+  border-radius: 100% 0 0 100%;
+  background-color: #e8eaf6;
+}
 
 .mat-calendar-body-end-range:not(.mat-calendar-body-begin-range) {
-    border-radius: 0 100% 100% 0;
-    background-color: #e8eaf6; }
+  border-radius: 0 100% 100% 0;
+  background-color: #e8eaf6;
+}
 
-.mat-calendar-body > tr .mat-calendar-cell-semi-selected ~ .mat-calendar-cell-semi-selected {
-    border-radius: 0; }
+.mat-calendar-body
+  > tr
+  .mat-calendar-cell-semi-selected
+  ~ .mat-calendar-cell-semi-selected {
+  border-radius: 0;
+}
 
 .mat-calendar-cell-semi-selected {
-    background-color: #F0E7FF; }
+  background-color: #f0e7ff;
+}
 
 .mat-button.active .mat-button-focus-overlay {
-    opacity: 1;
-} 
+  opacity: 1;
+}
