Add Examples : Form field autocomplete

--- a/src/assets/documents/components/formfield.html
+++ b/src/assets/documents/components/formfield.html
@@ -59,7 +59,12 @@
     <div class="doc-example-container">
       <div app-docs-example="form-field-disable"></div>
     </div>
-
+    <div class="doc-desc-2">
+      A autocomplete form field
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="form-field-autocomplete"></div>
+    </div>
 
 
   </div>
