Update datepicker examples

--- a/src/assets/examples/date-picker-single/date-picker-single.component.html
+++ b/src/assets/examples/date-picker-single/date-picker-single.component.html
@@ -7,4 +7,4 @@
 
 
 
-<viz-date-range-picker [date]="dateRange" (onApply)="applyDateRange($event)" typeMode="date"></viz-date-range-picker>
+<viz-date-range-picker (onApply)="applyDateRange($event)" typeMode="date"></viz-date-range-picker>
