Fix bug : Fix month picker can not auto add one year when both begin month and end month are same.

--- a/libs/components/date-range-picker/viz-date-range-picker.component.html
+++ b/libs/components/date-range-picker/viz-date-range-picker.component.html
@@ -8,7 +8,8 @@
           (ngModelChange)="onInputDate($event)"
           name="date"
           (dateInput)="onDateInput($event)"
-          (dateChange)="onDateChange($event)">
+          (dateChange)="onDateChange($event)"
+          [typeMode]="typeMode">
         <mat-range-datepicker
           #resultPicker [rangeMode]="rangeMode" (closed)="this.onClose($event)" [typeMode]="typeMode">
         </mat-range-datepicker>
