Update Component : add range date picker placeholder

--- a/src/assets/examples/date-picker-single/date-picker-single.component.html
+++ b/src/assets/examples/date-picker-single/date-picker-single.component.html
@@ -1,1 +1,1 @@
-<viz-date-range-picker (onApply)="applyDateRange($event)" typeMode="date"></viz-date-range-picker>
+<viz-date-range-picker (onApply)="applyDateRange($event)" typeMode="date" placeholder="Choose a date"></viz-date-range-picker>
