--- a/src/assets/examples/month-picker-range/month-picker-range.component.html
+++ b/src/assets/examples/month-picker-range/month-picker-range.component.html
@@ -1,1 +1,1 @@
-<viz-date-range-picker [date]="dateRange" (onApply)="applyDateRange($event)" typeMode="month" rangeMode></viz-date-range-picker>
+<viz-date-range-picker [date]="dateRange" (onApply)="applyDateRange($event)" typeMode="month" rangeMode placeholder="Choose a month and year range"></viz-date-range-picker>
