--- a/src/assets/examples/month-picker-single/month-picker-single.component.html
+++ b/src/assets/examples/month-picker-single/month-picker-single.component.html
@@ -1,1 +1,1 @@
-<viz-date-range-picker (onApply)="applyDateRange($event)" typeMode="month"></viz-date-range-picker>
+<viz-date-range-picker (onApply)="applyDateRange($event)" typeMode="month" placeholder="Month and year"></viz-date-range-picker>
