Fix bug : Fix custom select drop postion to auto

--- a/libs/components/customer-select/customer-select.component.scss
+++ b/libs/components/customer-select/customer-select.component.scss
@@ -216,8 +216,8 @@
   }
   ::ng-deep{
     .mat-menu-panel.viz-select-option {
-      position: absolute;
-      top: -17px;
+      // position: absolute;
+      // top: -17px;
   
   
       .viz-select-option-cell{
