--- a/src/assets/examples/customer-select/customer-select.component.html
+++ b/src/assets/examples/customer-select/customer-select.component.html
@@ -1,7 +1,62 @@
-<viz-customer-select menuShown="true" value="awfeawf">
+<viz-customer-select menuShown="true" value="awfeawf" #test>
+
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
+    <div>jfkalwfjl;aw</div>
 
 
-    <div>
-        awefjewhfjwahfjkaewhfkhl
-    </div>
+    <button (click)="test.hideMenu()">close</button>
+
 </viz-customer-select>
