Fix bug : Add open and close menu handleEvent

--- a/src/assets/examples/customer-select/customer-select.component.html
+++ b/src/assets/examples/customer-select/customer-select.component.html
@@ -1,60 +1,6 @@
-<viz-customer-select menuShown="true" value="awfeawf" #test>
+<viz-customer-select menuShown="true" value="awfeawf" #test (close)="menuClose()">
 
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
-    <div>jfkalwfjl;aw</div>
+    
 
 
     <button (click)="test.hideMenu()">close</button>
